--- a/WebScraping/aberothScrape/aberothScraper.ipynb
+++ b/WebScraping/aberothScrape/aberothScraper.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -59,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -68,7 +68,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -77,18 +77,18 @@
      "text": [
       "            Name  Skill Total    Gold  Enemies Vanquished\n",
       "0         Kaaras          337  909044              304559\n",
-      "1         Scamaz          337    2827              398933\n",
+      "1         Scamaz          337    4392              399075\n",
       "2        Cookiez          318    5207              197295\n",
-      "3           Deer          317   55034              177243\n",
-      "4         Arcand          315   31314              195100\n",
+      "3           Deer          317   37218              177340\n",
+      "4         Unique          315  400946              163986\n",
       "...          ...          ...     ...                 ...\n",
-      "5857  Taleteller           15    1313                1127\n",
-      "5858    Perilous           15     929                1122\n",
-      "5859      Lopess           15     776                1193\n",
-      "5860       Remon           15    1877                1710\n",
-      "5861    Dullahak           15    2253                1247\n",
+      "5848    Longjoes           15    1291                1499\n",
+      "5849       Farod           15     683                1343\n",
+      "5850       Maalo           15     962                1135\n",
+      "5851  Crafternln           15    1312                2508\n",
+      "5852   Zoneofive           15     600                1343\n",
       "\n",
-      "[5862 rows x 4 columns]\n"
+      "[5853 rows x 4 columns]\n"
      ]
     }
    ],
